force-app/main/default/objects/SFL1_Entertainment_Event__c/SFL1_Entertainment_Event__c.object-meta.xml
<CustomObject>
    <label>Entertainment Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entertainment Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>