force-app/main/default/objects/SFL1_Entertainment_Event__c/fields/General_Manager_2__c.field-meta.xml
<CustomField>
    <fullName>General_Manager_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Owner2&apos;s GM level approver</inlineHelpText>
    <label>General Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entertainment_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>