force-app/main/default/objects/SFL1_Entertainment_Event__c/fields/Owner_2__c.field-meta.xml
<CustomField>
    <fullName>Owner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Second owner to host the event</inlineHelpText>
    <label>Co-Host</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entertainment_Events</relationshipName>
    <type>Lookup</type>
</CustomField>