force-app/main/default/objects/SFL1_Entertainment_Event__c/fields/Owner_s_WCC__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_WCC__c</fullName>
    <description>Owner&apos;s work centre code</description>
    <inlineHelpText>Owner&apos;s work centre code</inlineHelpText>
    <label>Owner&apos;s WCC</label>
    <length>6</length>
    <type>Text</type>
</CustomField>