force-app/main/default/objects/SFL1_Entertainment_Event__c/recordTypes/Non_Sharing_Event.recordType-meta.xml
<RecordType>
    <fullName>Non_Sharing_Event</fullName>
    <active>true</active>
    <description>Choose this if the event is organised by one host</description>
    <label>Single Host</label>
</RecordType>