force-app/main/default/objects/SFL1_Entertainment_Event__c/recordTypes/Sharing_Event.recordType-meta.xml
<RecordType>
    <fullName>Sharing_Event</fullName>
    <active>true</active>
    <description>Choose this if the event are organised by two hosts</description>
    <label>Joint Hosts</label>
</RecordType>