force-app/main/default/objects/SFL1_Entertainment_Event__c/listViews/Client_Events_That_I_Co_Host.listView-meta.xml
<ListView>
    <fullName>Client_Events_That_I_Co_Host</fullName>
    <columns>NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>Entertainment_Venue__c</columns>
    <columns>Event_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_2__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>No_of_Places_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>hidden_I_Am_Co_Host__c</field>
        <operation>equals</operation>
        <value>True</value>
    </filters>
    <label>Client Events That I Co-Host</label>
</ListView>