force-app/main/default/objects/SFL1_Entertainment_Event__c/listViews/Client_Events_That_I_Own.listView-meta.xml
<ListView>
    <fullName>Client_Events_That_I_Own</fullName>
    <columns>NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>Entertainment_Venue__c</columns>
    <columns>Event_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_2__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>No_of_Places_Available__c</columns>
    <columns>No_of_Guests__c</columns>
    <filterScope>Mine</filterScope>
    <label>Client Events That I Own</label>
</ListView>