force-app/main/default/objects/SFL1_Entertainment_Event__c/listViews/Upcoming_Events.listView-meta.xml
<ListView>
    <fullName>Upcoming_Events</fullName>
    <columns>Event_Date_Time__c</columns>
    <columns>NAME</columns>
    <columns>Entertainment_Venue__c</columns>
    <columns>Event_Type__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Owner_2__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Date_Time__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Events</label>
</ListView>